BuildHughes/translation-tool/inputs/source_meta/objects/Common_Field_To_Label_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to convert a field label to custom label</description>
    <fields>
        <fullName>Country__c</fullName>
        <inlineHelpText>Enter Country Code</inlineHelpText>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API__c</fullName>
        <inlineHelpText>Please enter the field API Name</inlineHelpText>
        <label>Field API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <inlineHelpText>Enter Custom Label Name</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Common_Field_To_Label_Mapping</label>
</CustomObject>